--- a/artivity-apid/Artivity.Apid.csproj
+++ b/artivity-apid/Artivity.Apid.csproj
@@ -101,9 +101,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Modules\ApiModule.cs" />
     <Compile Include="Parameters\ActivityParameters.cs" />
     <Compile Include="HttpService.cs" />
     <Compile Include="Platform.cs" />
+    <Compile Include="Platforms\OSX\ThumbnailProvider.cs" />
+    <Compile Include="Platforms\IThumpnailProvider.cs" />
+    <Compile Include="Platforms\Win\ThumbnailProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ModuleBase.cs" />
@@ -117,7 +121,7 @@
     <Compile Include="Modules\UriModule.cs" />
     <Compile Include="Modules\MonitorModule.cs" />
     <Compile Include="Helpers\FileInfoCache.cs" />
-    <Compile Include="Platforms\Mac\CoreFoundation.cs" />
+    <Compile Include="Platforms\OSX\CoreFoundation.cs" />
     <Compile Include="Plugin\PluginChecker.cs" />
     <Compile Include="Plugin\PluginManifest.cs" />
     <Compile Include="Platforms\Win\InstallationWatchdog.cs" />
@@ -125,11 +129,12 @@
     <Compile Include="Platforms\Win\RegistryEntry.cs" />
     <Compile Include="Platforms\Win\RegistryMonitor.cs" />
     <Compile Include="Plugin\IInstallationWatchdog.cs" />
-    <Compile Include="Platforms\Mac\Carbon.cs" />
-    <Compile Include="Platforms\Mac\InstalledPrograms.cs" />
-    <Compile Include="Platforms\Mac\OsxPluginChecker.cs" />
+    <Compile Include="Platforms\OSX\Carbon.cs" />
+    <Compile Include="Platforms\OSX\InstalledPrograms.cs" />
+    <Compile Include="Platforms\OSX\OsxPluginChecker.cs" />
     <Compile Include="Platforms\Win\WinPluginChecker.cs" />
-    <Compile Include="Platforms\Mac\InstallationWatchdog.cs" />
+    <Compile Include="Platforms\OSX\InstallationWatchdog.cs" />
+    <Compile Include="Repositories\ResourceRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
