--- a/artivity-datamodel/packages.config
+++ b/artivity-datamodel/packages.config
@@ -5,7 +5,7 @@
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
   <package id="OpenLink.Data.Virtuoso" version="6.2.3128.1" targetFramework="net40" />
-  <package id="Semiodesk.Trinity.Core" version="0.9.122" targetFramework="net40" />
-  <package id="Semiodesk.Trinity.Modelling" version="0.9.122" targetFramework="net40" />
+  <package id="Semiodesk.Trinity.Core" version="0.9.133-rc" targetFramework="net40" />
+  <package id="Semiodesk.Trinity.Modelling" version="0.9.133-rc" targetFramework="net40" />
   <package id="VDS.Common" version="1.6.0" targetFramework="net40" />
 </packages>
