--- a/artivity-apid/Artivity.Apid.csproj
+++ b/artivity-apid/Artivity.Apid.csproj
@@ -50,11 +50,12 @@
       <HintPath>..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Semiodesk.Trinity, Version=0.9.133.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.133-rc\lib\Net40\Semiodesk.Trinity.dll</HintPath>
+    <Reference Include="Semiodesk.Trinity, Version=0.9.137.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.137-rc\lib\Net40\Semiodesk.Trinity.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="CommandLine">
