--- a/Artivity.Apid/app.config
+++ b/Artivity.Apid/app.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="TrinitySettings" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity" />
+    <section name="trinity" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity" />
+    <section name="oauth2" type="OAuth2.Configuration.OAuth2ConfigurationSection, OAuth2, Version=0.8.*, Culture=neutral"/>
   </configSections>
   <connectionStrings>
     <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset" />
   </connectionStrings>
-  <TrinitySettings namespace="Artivity.DataModel">
+  <trinity namespace="Artivity.DataModel">
     <OntologySettings>
 
       <Ontology Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#" Prefix="rdf">
@@ -68,12 +69,25 @@
         </RuleSet>
       </RuleSets>
     </VirtuosoStoreSettings>
-  </TrinitySettings>
+  </trinity>
+  <oauth2>
+    <services>
+      <add clientType="GoogleClient"
+          enabled="true"
+          clientId="APP-AF3XVP6X01AMZQH1"
+          clientSecret="0c883177-cfd8-4a0f-a111-03a5ba19539d"
+          redirectUri="http://localhost:8262/artivity/api/1.0/accounts/orcid/install" />
+    </services>
+  </oauth2>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
