--- a/Artivity.Apid/packages.config
+++ b/Artivity.Apid/packages.config
@@ -10,7 +10,9 @@
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net40" />
   <package id="Nancy.Serialization.JsonNet" version="1.4.1" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
+  <package id="OAuth2" version="0.8.36" targetFramework="net40" />
   <package id="OpenLink.Data.Virtuoso" version="6.2.3128.1" targetFramework="net40" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net40" />
   <package id="Semiodesk.Trinity.Core" version="0.9.137-rc" targetFramework="net40" />
   <package id="TinyVirtuoso" version="0.3.25" targetFramework="net40" />
   <package id="TinyVirtuoso.osx" version="7.2.2" targetFramework="net40" />
