--- a/Artivity.DataModel/app.config
+++ b/Artivity.DataModel/app.config
@@ -28,6 +28,10 @@
       <Ontology Uri="http://www.w3.org/2001/04/infoset#" Prefix="xml">
         <FileSource Location="Ontologies/xml.rdf"/>
       </Ontology>
+
+      <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/08/15/nao#" Prefix="nao">
+        <FileSource Location="Ontologies/nao.rdf"/>
+      </Ontology>
       
       <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/01/19/nie#" Prefix="nie">
         <FileSource Location="Ontologies/nie.rdf"/>
