--- a/libartivity/windows/libartivity/libartivity.vcxproj
+++ b/libartivity/windows/libartivity/libartivity.vcxproj
@@ -112,7 +112,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <AdditionalIncludeDirectories>..\libcurl\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -180,6 +180,7 @@
     <ClInclude Include="..\..\src\ActivityLog.h" />
     <ClInclude Include="..\..\src\artivity.h" />
     <ClInclude Include="..\..\src\curlresponse.h" />
+    <ClInclude Include="..\..\src\JSON\jsonxx.h" />
     <ClInclude Include="..\..\src\ObjectModel\Activities\Browse.h" />
     <ClInclude Include="..\..\src\ObjectModel\Activities\CreateFile.h" />
     <ClInclude Include="..\..\src\ObjectModel\Activities\DeleteFile.h" />
@@ -234,6 +235,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\ActivityLog.cpp" />
     <ClCompile Include="..\..\src\curlresponse.cpp" />
+    <ClCompile Include="..\..\src\JSON\jsonxx.cpp" />
     <ClCompile Include="..\..\src\ObjectModel\Activity.cpp" />
     <ClCompile Include="..\..\src\Resource.cpp" />
     <ClCompile Include="..\..\src\Serializer.cpp" />
